examples/test/testpolicy1478.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1478
  namespace: namespace443
spec:
  podSelector:
    matchLabels:
      key23: value20
      key40: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value30
          key15: value24
      podSelector:
        matchLabels:
          key15: value23
          key3: value16
